// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Alert Component > Visual Regression > maintains consistent visual structure 1`] = `
<div
  aria-atomic="true"
  aria-label="warning alert: Warning Title"
  aria-live="polite"
  class="relative rounded-lg transition-all duration-200 ease-out motion-reduce:transition-none focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary-600 focus-visible:ring-offset-2 forced-colors:outline forced-colors:outline-2 border border-warning-200 dark:border-warning-800 bg-warning-50 dark:bg-warning-950/30 text-warning-900 dark:text-warning-100 p-4"
  role="alert"
>
  <div
    class="flex gap-3"
  >
    <div
      class="shrink-0 text-warning-600 dark:text-warning-400 w-5 h-5"
    >
      <svg
        aria-hidden="true"
        class="w-5 h-5"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 20 20"
      >
        <path
          clip-rule="evenodd"
          d="M8.485 2.495c.673-1.167 2.357-1.167 3.03 0l6.28 10.875c.673 1.167-.17 2.625-1.516 2.625H3.72c-1.347 0-2.189-1.458-1.515-2.625L8.485 2.495zM10 5a.75.75 0 01.75.75v3.5a.75.75 0 01-1.5 0v-3.5A.75.75 0 0110 5zm0 9a1 1 0 100-2 1 1 0 000 2z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div
      class="flex-1 min-w-0"
    >
      <h3
        class="font-medium leading-tight mb-1 text-warning-900 dark:text-warning-100 text-base font-medium leading-relaxed text-slate-800 dark:text-slate-200"
      >
        Warning Title
      </h3>
      <div
        class="leading-relaxed text-warning-800 dark:text-warning-200 text-sm leading-relaxed text-slate-700 dark:text-slate-300"
      >
        Warning message content with multiple lines and detailed information
      </div>
      <div
        class="mt-3"
      >
        <div>
          <button
            class="inline-flex items-center justify-center px-3 py-1.5 text-sm font-medium rounded-md transition-colors duration-200 motion-reduce:transition-none focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-500 dark:focus:ring-primary-400 dark:focus:ring-offset-slate-900 disabled:opacity-50 disabled:cursor-not-allowed bg-primary-600 text-white hover:bg-primary-700 active:bg-primary-800"
          >
            Primary
          </button>
          <button
            class="inline-flex items-center justify-center px-3 py-1.5 text-sm font-medium rounded-md transition-colors duration-200 motion-reduce:transition-none focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-500 dark:focus:ring-primary-400 dark:focus:ring-offset-slate-900 disabled:opacity-50 disabled:cursor-not-allowed bg-transparent text-current border border-current hover:bg-current/10 active:bg-current/20"
          >
            Secondary
          </button>
        </div>
      </div>
    </div>
    <div
      class="shrink-0"
    >
      <button
        aria-label="Dismiss warning alert"
        class="p-1 rounded-md hover:bg-slate-100 dark:hover:bg-slate-700 transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary-600 focus-visible:ring-offset-2 forced-colors:outline forced-colors:outline-2 text-warning-500 hover:text-warning-700 dark:text-warning-400 dark:hover:text-warning-200"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="w-4 h-4"
          fill="none"
          focusable="false"
          stroke="currentColor"
          viewBox="0 0 24 24"
        >
          <path
            d="M6 18L18 6M6 6l12 12"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
      </button>
    </div>
  </div>
  <div
    class="sr-only"
  >
    Alert type: 
    warning
    .
     Title: Warning Title.
     Press dismiss button to close alert.
     Additional actions available.
  </div>
</div>
`;

exports[`Alert Component > Visual Regression > renders complex alert group correctly 1`] = `
<div
  aria-label="Alert notifications"
  class="space-y-3"
  role="group"
>
  <div
    aria-atomic="true"
    aria-label="info alert: Info"
    aria-live="polite"
    class="relative rounded-lg transition-all duration-200 ease-out motion-reduce:transition-none focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary-600 focus-visible:ring-offset-2 forced-colors:outline forced-colors:outline-2 border border-primary-200 dark:border-primary-800 bg-primary-50 dark:bg-primary-950/30 text-primary-900 dark:text-primary-100 p-4"
    role="alert"
  >
    <div
      class="flex gap-3"
    >
      <div
        class="shrink-0 text-primary-600 dark:text-primary-400 w-5 h-5"
      >
        <svg
          aria-hidden="true"
          class="w-5 h-5"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 20 20"
        >
          <path
            clip-rule="evenodd"
            d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7-4a1 1 0 11-2 0 1 1 0 012 0zM9 9a.75.75 0 000 1.5h.253a.25.25 0 01.244.304l-.459 2.066A1.75 1.75 0 0010.747 15H11a.75.75 0 000-1.5h-.253a.25.25 0 01-.244-.304l.459-2.066A1.75 1.75 0 009.253 9H9z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="flex-1 min-w-0"
      >
        <h3
          class="font-medium leading-tight mb-1 text-primary-900 dark:text-primary-100 text-base font-medium leading-relaxed text-slate-800 dark:text-slate-200"
        >
          Info
        </h3>
        <div
          class="leading-relaxed text-primary-800 dark:text-primary-200 text-sm leading-relaxed text-slate-700 dark:text-slate-300"
        >
          Information message
        </div>
      </div>
    </div>
    <div
      class="sr-only"
    >
      Alert type: 
      info
      .
       Title: Info.
    </div>
  </div>
  <div
    aria-atomic="true"
    aria-label="success alert"
    aria-live="polite"
    class="relative rounded-lg transition-all duration-200 ease-out motion-reduce:transition-none focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary-600 focus-visible:ring-offset-2 forced-colors:outline forced-colors:outline-2 border border-success-200 dark:border-success-800 bg-success-50 dark:bg-success-950/30 text-success-900 dark:text-success-100 p-4"
    role="alert"
  >
    <div
      class="flex gap-3"
    >
      <div
        class="shrink-0 text-success-600 dark:text-success-400 w-5 h-5"
      >
        <svg
          aria-hidden="true"
          class="w-5 h-5"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 20 20"
        >
          <path
            clip-rule="evenodd"
            d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.857-9.809a.75.75 0 00-1.214-.882l-3.236 4.53L8.25 10.5a.75.75 0 00-1.06 1.061l1.5 1.5a.75.75 0 001.137-.089l4-5.5z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="flex-1 min-w-0"
      >
        <div
          class="leading-relaxed text-success-800 dark:text-success-200 text-sm leading-relaxed text-slate-700 dark:text-slate-300"
        >
          Success message
        </div>
      </div>
      <div
        class="shrink-0"
      >
        <button
          aria-label="Dismiss success alert"
          class="p-1 rounded-md hover:bg-slate-100 dark:hover:bg-slate-700 transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary-600 focus-visible:ring-offset-2 forced-colors:outline forced-colors:outline-2 text-success-500 hover:text-success-700 dark:text-success-400 dark:hover:text-success-200"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="w-4 h-4"
            fill="none"
            focusable="false"
            stroke="currentColor"
            viewBox="0 0 24 24"
          >
            <path
              d="M6 18L18 6M6 6l12 12"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="sr-only"
    >
      Alert type: 
      success
      .
       Press dismiss button to close alert.
    </div>
  </div>
  <div
    aria-atomic="true"
    aria-label="error alert: Error"
    aria-live="polite"
    class="relative rounded-lg transition-all duration-200 ease-out motion-reduce:transition-none focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary-600 focus-visible:ring-offset-2 forced-colors:outline forced-colors:outline-2 border border-error-200 dark:border-error-800 bg-error-50 dark:bg-error-950/30 text-error-900 dark:text-error-100 p-4"
    role="alert"
  >
    <div
      class="flex gap-3"
    >
      <div
        class="shrink-0 text-error-600 dark:text-error-400 w-5 h-5"
      >
        <svg
          aria-hidden="true"
          class="w-5 h-5"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 20 20"
        >
          <path
            clip-rule="evenodd"
            d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zM8.28 7.22a.75.75 0 00-1.06 1.06L8.94 10l-1.72 1.72a.75.75 0 101.06 1.06L10 11.06l1.72 1.72a.75.75 0 101.06-1.06L11.06 10l1.72-1.72a.75.75 0 00-1.06-1.06L10 8.94 8.28 7.22z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="flex-1 min-w-0"
      >
        <h3
          class="font-medium leading-tight mb-1 text-error-900 dark:text-error-100 text-base font-medium leading-relaxed text-slate-800 dark:text-slate-200"
        >
          Error
        </h3>
        <div
          class="leading-relaxed text-error-800 dark:text-error-200 text-sm leading-relaxed text-slate-700 dark:text-slate-300"
        >
          Error message with action
        </div>
        <div
          class="mt-3"
        >
          <button
            class="inline-flex items-center justify-center px-3 py-1.5 text-sm font-medium rounded-md transition-colors duration-200 motion-reduce:transition-none focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-500 dark:focus:ring-primary-400 dark:focus:ring-offset-slate-900 disabled:opacity-50 disabled:cursor-not-allowed bg-transparent text-current border border-current hover:bg-current/10 active:bg-current/20"
          >
            Retry
          </button>
        </div>
      </div>
    </div>
    <div
      class="sr-only"
    >
      Alert type: 
      error
      .
       Title: Error.
       Additional actions available.
    </div>
  </div>
</div>
`;

exports[`Alert Component > Visual Regression > renders minimal alert correctly 1`] = `
<div
  aria-atomic="true"
  aria-label="info alert"
  aria-live="polite"
  class="relative rounded-lg transition-all duration-200 ease-out motion-reduce:transition-none focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary-600 focus-visible:ring-offset-2 forced-colors:outline forced-colors:outline-2 border border-primary-200 dark:border-primary-800 bg-primary-50 dark:bg-primary-950/30 text-primary-900 dark:text-primary-100 p-4"
  role="alert"
>
  <div
    class="flex gap-3"
  >
    <div
      class="shrink-0 text-primary-600 dark:text-primary-400 w-5 h-5"
    >
      <svg
        aria-hidden="true"
        class="w-5 h-5"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 20 20"
      >
        <path
          clip-rule="evenodd"
          d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7-4a1 1 0 11-2 0 1 1 0 012 0zM9 9a.75.75 0 000 1.5h.253a.25.25 0 01.244.304l-.459 2.066A1.75 1.75 0 0010.747 15H11a.75.75 0 000-1.5h-.253a.25.25 0 01-.244-.304l.459-2.066A1.75 1.75 0 009.253 9H9z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div
      class="flex-1 min-w-0"
    >
      <div
        class="leading-relaxed text-primary-800 dark:text-primary-200 text-sm leading-relaxed text-slate-700 dark:text-slate-300"
      >
        Simple alert
      </div>
    </div>
  </div>
  <div
    class="sr-only"
  >
    Alert type: 
    info
    .
  </div>
</div>
`;
